--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 
 		<mule.version>3.8.3</mule.version>
     	<mule.tools.version>1.2</mule.tools.version>
+    	<derby.version>10.14.1.0</derby.version>
+    	<activemq.version>5.15.2</activemq.version>
 	</properties>
 
 	<build>
@@ -142,26 +144,29 @@
             <version>${mule.version}</version>
             <scope>provided</scope>
         </dependency>
-    <dependency>
-            <groupId>org.apache.derby</groupId>
-            <artifactId>derby</artifactId>
-            <version>10.14.1.0</version>
-        </dependency>
+
     <dependency>
             <groupId>org.mule.transports</groupId>
             <artifactId>mule-transport-jms</artifactId>
             <version>${mule.version}</version>
             <scope>provided</scope>
         </dependency>
+        
+<!-- non Mule dependency-->        
+    <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+            <version>${derby.version}</version>
+        </dependency>        
     <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-broker</artifactId>
-            <version>5.15.2</version>
+            <version>${activemq.version}</version>
         </dependency>
     <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-kahadb-store</artifactId>
-            <version>5.15.2</version>
+            <version>${activemq.version}</version>
         </dependency>
     </dependencies>
 
